--- a/python/bq/test_gbq.ipynb
+++ b/python/bq/test_gbq.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,16 +138,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LoadJob<project=test-matt-219200, location=US, id=9f0b7b62-063d-40f7-b152-b5e95c8b05cf>"
+       "LoadJob<project=test-matt-219200, location=US, id=6d5097d2-59a0-4984-b5ea-f9b90dfc18b0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -331,23 +331,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Bill</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Bob</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Kate</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Bob</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Matt</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Bob</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Don</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Bob</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -356,13 +356,13 @@
       "text/plain": [
        "   user_id user_name\n",
        "0        1       Bob\n",
-       "1        2      Bill\n",
-       "2        3      Kate\n",
-       "3        4      Matt\n",
-       "4        5       Don"
+       "1        1       Bob\n",
+       "2        1       Bob\n",
+       "3        1       Bob\n",
+       "4        1       Bob"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
