--- a/python/bq/test_gcs.ipynb
+++ b/python/bq/test_gcs.ipynb
@@ -6,18 +6,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from google.cloud import storage\n",
+    "from google.cloud import storage, bigquery\n",
     "import os\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# bucket_name = \"data-mattm-test-sbx\"\n",
-    "# bucket = client.get_bucket(bucket_name)"
+    "project_id = os.getenv(\"GBQ_PROJECT_ID\")\n",
+    "bucket_nm = os.getenv(\"GCS_BUCKET\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_gcs_uris_to_load(bucket_nm, prefix) -> list:\n",
+    "    gcs_client = storage.Client(project_id)\n",
+    "    bucket = gcs_client.get_bucket(bucket_nm)\n",
+    "    blobs = bucket.list_blobs(prefix=prefix)\n",
+    "\n",
+    "    # only grab parquet files\n",
+    "    gcs_uris = [blob.public_url for blob in blobs if blob.name.endswith('.parquet')]\n",
+    "\n",
+    "    return gcs_uris"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_bq_from_gcs(gcs_uris, dataset_nm, table_nm) -> None:\n",
+    "    table_id = f\"{project_id}.{dataset_nm}.{table_nm}\"\n",
+    "    job_config = bigquery.LoadJobConfig(\n",
+    "        source_format=bigquery.SourceFormat.PARQUET\n",
+    "    )\n",
+    "\n",
+    "    bq_client = bigquery.Client(project_id)\n",
+    "    job = bq_client.load_table_from_uri(\n",
+    "        gcs_uris,\n",
+    "        table_id,\n",
+    "        job_config=job_config,\n",
+    "    ).result()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prefix = \"test_files/par\"\n",
+    "gcs_uris = get_gcs_uris_to_load(bucket_nm, prefix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_bq_from_gcs(gcs_uris, \"sandbox\", \"test_internal_from_ext\")"
    ]
   },
   {
@@ -26,19 +82,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# destination_blob_name = \"test_data.csv\"\n",
-    "# source_file_name = os.path.expanduser(\"~/test_dummy_data/gbq/test_data.csv\")\n",
-    "\n",
-    "# blob = bucket.blob(destination_blob_name)\n",
-    "# blob.upload_from_filename(source_file_name)"
-   ]
   },
   {
    "cell_type": "code",
