--- a/docker/spark1/delta_lake_template.ipynb
+++ b/docker/spark1/delta_lake_template.ipynb
@@ -72,7 +72,7 @@
     "    ]\n",
     "\n",
     "    df = spark.createDataFrame(data, schema=schema)\n",
-    "    create_or_replace_delta_table(df, \"/home/jovyan/work/src_ppl\")"
+    "    create_or_replace_delta_table(df, \"/home/jovyan/src_ppl\")"
    ]
   },
   {
@@ -81,7 +81,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#build the delta lake table\n",
     "build_src_table()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#read the table and display the results\n",
+    "src_df = spark.read.format(\"delta\").load(\"/home/jovyan/src_ppl\")\n",
+    "src_df.show()"
    ]
   }
  ],
