--- a/docker/spark1/delta_lake_template.ipynb
+++ b/docker/spark1/delta_lake_template.ipynb
@@ -6,6 +6,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "Author: Matt Martin\n",
+    "Date: 2023-10-20\n",
+    "Desc: Delta Lake Template in jupypter nb for docker image to copy when loading for end user\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from datetime import datetime\n",
     "import pyspark\n",
     "from pyspark.sql.types import StructType, StructField, StringType, IntegerType, DateType\n",
