--- a/iceberg/ice1.ipynb
+++ b/iceberg/ice1.ipynb
@@ -45,6 +45,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#spark.sparkContext.addPyFile(\"/usr/local/spark/jars/iceberg-spark-runtime-3.5_2.13-1.4.1.jar\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [
