--- a/iceberg/ice1.ipynb
+++ b/iceberg/ice1.ipynb
@@ -25,7 +25,17 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "23/11/02 08:44:57 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
    "source": [
     "import pyspark\n",
     "from pyspark.sql import SparkSession\n",
@@ -54,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +88,7 @@
     "\"\"\"\n",
     "\n",
     "sql = \"\"\"\n",
-    "CREATE TABLE local.db1.persons3(first_name string, last_name string, age int) using iceberg\n",
+    "CREATE TABLE local.db1.persons4(first_name string, last_name string, age int) using iceberg\n",
     "\"\"\"\n",
     "spark.sql(sql).show()"
    ]
