--- a/iceberg/ice1_docker/iceberg_template.ipynb
+++ b/iceberg/ice1_docker/iceberg_template.ipynb
@@ -6,27 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import shutil\n",
-    "import site\n",
-    "\n",
-    "# Define the source and destination paths\n",
-    "source_path = '/usr/local/spark/jars/iceberg-spark-runtime-3.5_2.13-1.4.1.jar'\n",
-    "destination_path = site.getsitepackages()[0]+\"/pyspark/jars/\"\n",
-    "\n",
-    "# Copy the file\n",
-    "shutil.copy(source_path, destination_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import pyspark\n",
     "from pyspark.sql import SparkSession\n",
     "import os\n",
     "#.config(\"spark.sql.defaultCatalog\", \"local\") \\\n",
+    "#.config(\"spark.sql.catalogImplementation\", \"in-memory\") \\\n",
     "spark = SparkSession.builder \\\n",
     "    .master(\"local\") \\\n",
     "    .config(\"spark.sql.extensions\",\"org.apache.iceberg.spark.extensions.IcebergSparkSessionExtensions\") \\\n",
@@ -35,8 +19,7 @@
     "    .config(\"spark.sql.catalog.local\", \"org.apache.iceberg.spark.SparkCatalog\") \\\n",
     "    .config(\"spark.sql.catalog.local.type\", \"hadoop\") \\\n",
     "    .config(\"spark.sql.catalog.local.warehouse\", \"./warehouse\") \\\n",
-    "    .config(\"spark.sql.catalogImplementation\", \"in-memory\") \\\n",
-    "    .getOrCreate()"
+    "    .getOrCreate()\n"
    ]
   },
   {
