--- a/spark/spark_tutorial.ipynb
+++ b/spark/spark_tutorial.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "23/12/10 06:34:01 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Author: Matt Martin\n",
@@ -14,14 +24,24 @@
     "\n",
     "## create the spark connection/instance\n",
     "from pyspark.sql import SparkSession\n",
-    "spark = SparkSession.builder.appName(\"simple app\").getOrCreate()"
+    "spark = SparkSession.builder.appName(\"test\") \\\n",
+    "    .config(\"spark.sql.warehouse.dir\", \"./test_dw\") \\\n",
+    "    .getOrCreate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "#generate some data\n",
     "data1 = [\n",
@@ -70,6 +90,95 @@
     "        ON p1.name = p2.name\n",
     "\"\"\"\n",
     "spark.sql(sql).write.mode(\"overwrite\").parquet('./persons_combined.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sql = \"\"\"\n",
+    "create or replace temp view test\n",
+    "as\n",
+    "SELECT\n",
+    "     COALESCE(p1.name, p2.name) as name\n",
+    "    ,COALESCE(p1.age, p2.age) as age1\n",
+    "    ,p2.age as other_age\n",
+    "FROM persons1 as p1\n",
+    "    FULL OUTER JOIN persons2 as p2\n",
+    "        ON p1.name = p2.name\n",
+    "\n",
+    "\"\"\"\n",
+    "spark.sql(sql)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+----+---------+\n",
+      "| name|age1|other_age|\n",
+      "+-----+----+---------+\n",
+      "| Alex|  14|     null|\n",
+      "| Matt|  12|       15|\n",
+      "|Sandy|  31|       31|\n",
+      "|  Tom|  19|       19|\n",
+      "+-----+----+---------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql(\"select * from test\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.write.saveAsTable(\"test_tbl3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+----+\n",
+      "|age|name|\n",
+      "+---+----+\n",
+      "| 12|Matt|\n",
+      "| 14|Alex|\n",
+      "+---+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql(\"select * from test_tbl3\").show()"
    ]
   },
   {
