--- a/spark/spark_tutorial.ipynb
+++ b/spark/spark_tutorial.ipynb
@@ -183,6 +183,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+---+\n",
+      "|name|age|\n",
+      "+----+---+\n",
+      "|Matt| 12|\n",
+      "|Alex| 14|\n",
+      "+----+---+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql(\"select x.name, y.age from test_tbl2 as x join test_tbl3 as y on x.name = y.name\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
