--- a/spark/spark_gen_test_data.ipynb
+++ b/spark/spark_gen_test_data.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,20 +55,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------+----------+\n",
-      "|row_id|      date|\n",
-      "+------+----------+\n",
-      "|     1|2001-01-01|\n",
-      "|     1|2001-01-02|\n",
-      "|     1|2001-01-03|\n",
-      "|     1|2001-01-04|\n",
-      "|     1|2001-01-05|\n",
-      "|     1|2001-01-06|\n",
-      "|     1|2001-01-07|\n",
-      "|     1|2001-01-08|\n",
-      "|     1|2001-01-09|\n",
-      "|     1|2001-01-10|\n",
-      "+------+----------+\n",
+      "+------+----------+--------------------+\n",
+      "|row_id|      date|             test_id|\n",
+      "+------+----------+--------------------+\n",
+      "|     1|2001-01-01|e31821d6-819c-4f0...|\n",
+      "|     1|2001-01-02|cd9b626a-5360-40a...|\n",
+      "|     1|2001-01-03|6c924bb9-2e8e-416...|\n",
+      "|     1|2001-01-04|5bd58446-43bf-4d9...|\n",
+      "|     1|2001-01-05|ae865f71-c83a-4fd...|\n",
+      "|     1|2001-01-06|ddc28548-c5fe-49d...|\n",
+      "|     1|2001-01-07|153713a0-ddfc-49c...|\n",
+      "|     1|2001-01-08|ec6ff8dc-d566-464...|\n",
+      "|     1|2001-01-09|297d8cf2-dc3d-4c1...|\n",
+      "|     1|2001-01-10|38e55e0c-a159-404...|\n",
+      "+------+----------+--------------------+\n",
       "only showing top 10 rows\n",
       "\n"
      ]
@@ -76,7 +76,7 @@
    ],
    "source": [
     "sql = \"\"\"\n",
-    "select n.row_id, d.date\n",
+    "select n.row_id, d.date, uuid() as test_id\n",
     "from numbers as n, dates as d\n",
     "limit 10000\n",
     "\"\"\"\n",
